# bibcleaner

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  bibcleaner.py  bibcleaner_gui.py  paper.md  pyproject.toml
src/bibcleaner/: __init__.py  __main__.py  cleaner.py  cli.py  dedup.py  gui.py  normalizer.py  parser.py
tests/: test_bibcleaner.py
