[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bibcleaner"
version = "0.1.0"
description = "Parse, normalize, and deduplicate BibTeX bibliography files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["bibtex", "bibliography", "latex", "pandoc", "deduplication", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
bibcleaner = "bibcleaner:main"
bibcleaner-gui = "bibcleaner_gui:main"

[tool.setuptools]
py-modules = ["bibcleaner", "bibcleaner_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
